HTTP-server enriched out-of-the-box parameters for Headers/Queries/Path with `Set<T>` support